--- a/karl/views/forms/templates/formish/widgets/KarlTinyMCE/widget.html
+++ b/karl/views/forms/templates/formish/widgets/KarlTinyMCE/widget.html
@@ -1,6 +1,6 @@
 <fieldset class="${field.cssname}">
   <input type="hidden" name="text_text_format" value="text/html"/>
   <textarea name="${field.name}" rows="1" cols="40"
-	    class="mceEditor karlrichtextfield" tal:content="structure field.value[0]"></textarea>
+	    class="mceEditor karlrichtextfield" tal:content="field.value[0]"></textarea>
   <!-- wiring from karl-tiny-wire.js -->
 </fieldset>
