--- a/karl/views/static/tinymce/3.3.9.2/themes/advanced/skins/karl/content.css
+++ b/karl/views/static/tinymce/3.3.9.2/themes/advanced/skins/karl/content.css
@@ -34,8 +34,7 @@ scrollbar-track-color:#F5F5F5;
 
 /* quoting */
 .quotedreplytext {
-background-color:silver;
-border:1px solid gray;
-margin-left:4em;
-padding:2em;
+  border-left: 2px solid #3A74A9;
+  margin-left: 0em;
+  padding: 2em;
 }
