--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -1688,9 +1688,13 @@ ul.tagUsersList li {
 	color: #639332;
 }
 .portraid {
-	float: right;
+    float: left;
+    margin: 0 8px 8px 0;
+}
+.blogComment .portraid {
+    float: right;
     clear: both;
-	margin: 20px 0 8px 20px;
+    margin: 20px 0 8px 20px;
 }
 .portraid img {
   display: block;
