--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -346,10 +346,14 @@ table.content-listing {
   width: 100%;
   border-collapse: collapse;
   border-spacing:0;
-  margin: 1em 0em 1em 0em;
+  margin: 0 0em 1em 0em;
   padding: 0;
   font-size: 1em;
   border-bottom: 1px dashed #e4e9eb;
+}
+.hiddenCell {
+    padding: 0 !important;
+    width: 0;
 }
 * html table.content-listing {
   width:98%;
