for calendar hovering, set only half hour to be highlighted instead of a full hour LP #628254

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -2343,7 +2343,7 @@ body .cal_hour_event .cal_event_block .time {
   background-color: #ecf2ff !important;
 }
 .cal div.hov_below {
-  background-color: #ecf2ff !important;
+  background-color: transparent !important;
 }
 .cal td .add,
 .cal div .add {
