adjusted the calendar hover so that only IE6/7 have a half-hour highlighted, other browsers will have the full hour highlighted LP #628254

--- a/karl/views/static/karl_ie.css
+++ b/karl/views/static/karl_ie.css
@@ -102,6 +102,10 @@ ul.karldropdown-menu {
     top: 21px !important;
 }
 
+.cal div.hov_below {
+  background-color: transparent !important;
+}
+
 /* rounded corners fix */
 * html li.bit-box {
   padding: 1px 15px 4px 6px !important;
