correct bottlecap demo's new location

--- a/karl/views/static/testing.html
+++ b/karl/views/static/testing.html
@@ -77,7 +77,7 @@
         karl.contentfeeds
       </li>
       <li>
-        <a href="bottlecap/sl/livesearch/demo.html">Demo</a>
+        <a href="bottlecap/bc.livesearch/demo.html">Demo</a>
         bottlecap livesearch
       </li>
     </ul>
