minor updates based on user feedback
split up other into community and calendarevent
change display of page/post menu items to Wikis/Blogs
community li rows are smaller, and workaround style issue if there is only one result
make more link in suggestions dropdown blue to emphasize that it's a link

--- a/karl/views/static/bottlecap-wire/livesearch.css
+++ b/karl/views/static/bottlecap-wire/livesearch.css
@@ -227,7 +227,7 @@
 }
 
 .bc-livesearch-more {
-    color: #999999;
+    color: blue;
     display: block;
     position: absolute;
     width: 91px;
