--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -3410,3 +3410,115 @@ ul.menu li {
     clear: both;
 }
 
+/* Dressed-up search results */
+
+.sras-discreet {
+    color: #999999;
+    display: block;
+}
+
+.sras-header {
+    text-align: center;
+    padding-bottom: 1em;
+}
+
+.sras-header input {
+    height: 2em;
+}
+
+#sras-content {
+    font-size: 12px;
+}
+
+.sras-searchknobs {
+    width: 150px;
+    float: left;
+    border-right: 1px solid #A3A3A3;
+    padding-bottom: 9999px;
+    margin-bottom: -9999px;
+}
+
+.sras-searchknobgroup {
+    border-bottom: solid #A3A3A3 1px;
+    padding: 1em 0;
+}
+
+.sras-searchknobs a,
+.sras-searchknobs a:visited {
+    text-decoration: none;
+    color: #3A74A9;
+}
+
+.sras-searchknobs .sras-searchcontent a {
+    padding-left: 5px;
+    line-height: 2em;
+}
+
+.sras-searchknobs p {
+    margin-top: 0.1em;
+    margin-bottom: 0.1em;
+}
+
+.sras-searchknobgroup.last {
+    border-bottom: none;
+}
+
+.sras-searchknobgroup label {
+    display: block;
+    font-weight: bold;
+    margin: 10px 0 3px;
+}
+
+.sras-searchknobgroup ul {
+    margin: 0;
+    padding: 0;
+}
+
+.sras-searchknobgroup li {
+    display: block;
+}
+
+#sras-results {
+    margin-left: 170px;
+}
+
+.sras-result {
+    margin-bottom: 1em;
+}
+
+.sras-result-title,
+.sras-result-title:visited {
+    font-size: 123%;
+    font-weight: bold;
+    color: #3A74A9;
+}
+
+.sras-summary {
+    margin: 0.2em 0;
+}
+
+.sras-highlight {
+    font-weight: bold;
+}
+
+.sras-details,
+.sras-details a {
+    color: gray;
+}
+
+#sras-pagination {
+    margin: 2em 0 0 170px;
+    background-color: lightgray;
+    text-align: right;
+    padding: 0.4em
+}
+
+#sras-authorknob, #sras-tagknob {
+    padding: 0.2em;
+    font-size: 0.8em;
+    margin-top: 0.2em;
+}
+
+#sras-searchbutton {
+    padding: 0.2em;
+}
