have site announcement take full width on screen

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -506,6 +506,7 @@ a.chparent:hover {
 #site-announcement {
   float: left;
   margin-left: 15px;
+  width: 870px;
 }
 .ie-announcement {
     float: left;
