Grid reorganize: make sure that both ESC and click-outside can be used to exit the Move To menu (fixes LP #783577)

--- a/karl/views/static/jquery-ui/ui.custom.css
+++ b/karl/views/static/jquery-ui/ui.custom.css
@@ -258,11 +258,12 @@
     font-size: 1em;
 }
 
-/*
 .ui-grid-footer-button-positioner {
+    float: left;
+    /*
     margin-left: 4px;
+    */
 }
-*/
 
 /* global selector in the grid column header */
 
