Got a lot wired up. Complex editors for fields which display multiple values.  Storing pile of JSON directly on wikipage. Hyperling to actual wikipage.

--- a/karl/views/static/slickgrid/piledriver.css
+++ b/karl/views/static/slickgrid/piledriver.css
@@ -247,3 +247,9 @@ input.editor-checkbox {
 .cell-effort-driven {
     text-align: center;
 }
+
+.slick-columnpicker * {
+    font-size: 8px;
+    text-align: left;
+    font-weight: normal;
+}
