--- a/karl/views/static/slickgrid/piledriver.css
+++ b/karl/views/static/slickgrid/piledriver.css
@@ -1,11 +1,11 @@
 @import url('examples/slick-default-theme.css');
 
 .ag-gridframe {
+    font-family: arial;
     width: 850px;
 }
 
-.ag-gridframe * {
-    font-family: arial;
+#ag-grid * {
     font-size: 8pt;
 }
 
@@ -26,28 +26,28 @@
 
     list-style: none;
     margin: 0;
-} 
+}
 
-#myGrid {
+#ag-grid {
     background: white;
     outline: 0;
     border: 1px solid gray;
 }
 
 .grid-header {
-	border: 1px solid gray;
-	border-bottom: 0;
-	border-top: 0;
-	background: url('images/header-bg.gif') repeat-x center top;
-	color: black;
-	height: 24px;
-	line-height: 24px;
-}	
+    border: 1px solid gray;
+    border-bottom: 0;
+    background-color: #87cefa;
+    color: black;
+    height: 24px;
+    line-height: 24px;
+}
 
-.grid-header label {
-	display: inline-block;
-	font-weight: bold;
+.grid-header label, .grid-header a {
+    display: inline-block;
+    font-weight: bold;
     margin: auto auto auto 6px;
+    font-size: 1.2em;
 }
 
 .grid-header .ui-icon {
@@ -61,116 +61,111 @@
 }
 
 .grid-header #txtSearch {
-	margin: 0 4px 0 4px;
-	padding: 2px 2px;
-	-moz-border-radius: 2px;
-	-webkit-border-radius: 2px;
-	border: 1px solid silver;
+    margin: 0 4px 0 4px;
+    padding: 2px 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border: 1px solid silver;
 }
 
 .options-panel {
-	-moz-border-radius: 6px;
-	-webkit-border-radius: 6px;
-	border: 1px solid silver;
-	background: #f0f0f0;	
-	padding: 4px;		
-	margin-bottom: 20px;
-    width:320px;
-    position:absolute;
-    top:0px;
-    left:650px;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border: 1px solid silver;
+    background: #f0f0f0;
+    padding: 4px;
+    margin-bottom: 20px;
+    width: 320px;
+    position: absolute;
+    top: 0px;
+    left: 650px;
 }
-
- 
 
 /* Individual cell styles */
 .slick-cell.task-name {
-	font-weight: bold;
-	text-align: right;
+    font-weight: bold;
+    text-align: right;
 }
-
 
 .slick-cell.task-percent {
-	text-align: right;
+    text-align: right;
 }
 
-
 .slick-cell.cell-move-handle {
-	font-weight: bold;
-	text-align: right;
+    font-weight: bold;
+    text-align: right;
     border-right: solid gray;
 
     background: #efefef;
-	cursor: move;
+    cursor: move;
 }
 
 .cell-move-handle:hover {
-	background: #b6b9bd;
+    background: #b6b9bd;
 }
 
 .slick-row.selected .cell-move-handle {
-	background: #D5DC8D;
+    background: #D5DC8D;
 }
 
 .slick-row .cell-actions {
-	text-align: left;
+    text-align: left;
 }
 
 .slick-row.complete {
-	background-color: #DFD;
-	color: #555;
+    background-color: #DFD;
+    color: #555;
 }
 
 .percent-complete-bar {
-	display: inline-block;
-	height: 6px;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
+    display: inline-block;
+    height: 6px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
 }
-
 
 /* TextCellEditor, DateCellEditor */
 input.editor-text {
-	width: 100%;
-	height: 100%;
-	border: 0;
-	margin: 0;
-	background: transparent;
-	outline: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+    margin: 0;
+    background: transparent;
+    outline: 0;
     padding: 0;
 
 }
 
 .ui-datepicker-trigger {
-	margin-top: 2px;
-	padding: 0;
-	vertical-align: top;
+    margin-top: 2px;
+    padding: 0;
+    vertical-align: top;
 }
 
 /* PercentCompleteCellEditor */
 input.editor-percentcomplete {
-	width: 100%;
-	height: 100%;
-	border: 0;
-	margin: 0;
-	background: transparent;
-	outline: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+    margin: 0;
+    background: transparent;
+    outline: 0;
     padding: 0;
 
     float: left;
 }
 
 .editor-percentcomplete-picker {
-	position: relative;
+    position: relative;
     display: inline-block;
     width: 16px;
     height: 100%;
     background: url("images/pencil.gif") no-repeat center center;
-	overflow: visible;
-	z-index: 1000;
-	float: right;
+    overflow: visible;
+    z-index: 1000;
+    float: right;
 }
-	
+
 .editor-percentcomplete-helper {
     border: 0 solid gray;
     position: absolute;
@@ -181,59 +176,54 @@ input.editor-percentcomplete {
 
     width: 120px;
     height: 140px;
-    display: none;	
-	overflow: visible;
+    display: none;
+    overflow: visible;
 }
 
-
 .editor-percentcomplete-wrapper {
-	background:beige;
+    background: beige;
     padding: 20px 8px;
 
-    width:100%;
-	height:98px;
-	border:1px solid gray;
-	border-left:0;
+    width: 100%;
+    height: 98px;
+    border: 1px solid gray;
+    border-left: 0;
 }
 
 .editor-percentcomplete-buttons {
-	float: right;	
+    float: right;
 }
 
 .editor-percentcomplete-buttons button {
-	width: 80px;	
+    width: 80px;
 }
-
 
 .editor-percentcomplete-slider {
-	float: left;	
+    float: left;
 }
 
- .editor-percentcomplete-picker:hover .editor-percentcomplete-helper {
-	display: block;
+.editor-percentcomplete-picker:hover .editor-percentcomplete-helper {
+    display: block;
 }
 
 .editor-percentcomplete-helper:hover {
-	display: block;
+    display: block;
 }
-
-
 
 /* YesNoSelectCellEditor */
 select.editor-yesno {
-	width: 100%;
-	margin: 0;
-	vertical-align: middle;		
+    width: 100%;
+    margin: 0;
+    vertical-align: middle;
 }
 
 /* YesNoCheckboxCellEditor */
 input.editor-checkbox {
-	margin: 0;
-	height: 100%;
-	padding: 0;
-	border: 0;
+    margin: 0;
+    height: 100%;
+    padding: 0;
+    border: 0;
 }
-
 
 .ag-projtitle {
     font-weight: bold;
@@ -243,7 +233,6 @@ input.editor-checkbox {
     font-style: italic;
 }
 
-
 .cell-effort-driven {
     text-align: center;
 }
@@ -251,5 +240,28 @@ input.editor-checkbox {
 .slick-columnpicker * {
     font-size: 8px;
     text-align: left;
+    font-weight: normal;
+}
+
+#ag-setup-frame {
+    border: solid gray 1px;
+}
+
+#ag-setup-content {
+    margin: 1.2em;
+}
+
+#ag-setup-content * {
+    font-family: sans-serif;
+}
+
+#ag-setup-content h2 {
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+#ag-setup-content label {
+    font-size: 11px;
     font-weight: normal;
 }
