--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -3522,3 +3522,10 @@ ul.menu li {
 .ui-grid-pagination .ui-icon {
     text-indent: 9999px
 }
+
+
+/* jquery ui format animated loading icon for Smoothness theme */
+body .ui-state-default .karl-icon-loading {
+    background-image: url("images/karl-icon-loading.gif");
+}
+
