--- a/karl/views/static/karl-plugins/karl-wikitoc/karl.wikitoc.css
+++ b/karl/views/static/karl-plugins/karl-wikitoc/karl.wikitoc.css
@@ -32,14 +32,91 @@
     right: 0;
     z-index: 1111;
     overflow: hidden;
+    border: 1px solid #AAAAAA;
+    color: #222222;
+    background-color: #d3d3d3; 
+    font-weight: bold;
+}
+.karl-wikitoc-inspector fieldset {
+    border: 2px groove #f0f0f0;
+}
+.karl-wikitoc-inspector fieldset > div {
+    padding: 1em;
+}
+.karl-wikitoc-inspector legend {
+    color: #222222;
 }
 
 .karl-wikitoc-inspector-wrapper {
     width: 190px;
-    padding: 20px;
-    padding-top: 75px;
+}
+.karl-wikitoc-inspector-wrapper2 {
+    padding: 10px;
+    padding-top: 90px;
 }
 
-.karl-wikitoc-columnselectors {
-    margin-top: 100px;
+fieldset.karl-wikitoc-columnselectors {
+    margin-top: 90px;
 }
+
+.karl-wikitoc-icon-search {
+    float: left;
+    position: relative;
+}
+.karl-wikitoc-input-livesearch {
+    width: 122px;
+    margin-left: -16px;
+    padding-left: 16px;
+}
+    
+.karl-wikitoc-grid .grid-canvas {
+    font-size: 0.9em;
+}
+
+.karl-wikitoc-items  {
+    padding: 10px;
+    display: inline-block;
+    float: left;
+}
+
+.karl-wikitoc-grid .grid-canvas .odd div {
+    background-color: #F0F2F4;
+}
+
+.karl-wikitoc-grid-row-hover .slick-cell {
+    background: url("images/e6e6e6_40x100_textures_02_glass_75.png") repeat-x scroll 0 50% #E6E6E6 !important;
+}
+
+.karl-wikitoc-groupheader {
+    font-weight: bold;
+}
+
+
+
+/* slickgrid cell, group and expansion styles */
+
+.slick-cell {
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
+.slick-group .slick-cell {
+    background: #d3d3d3 !important;
+}
+
+
+.slick-group-toggle {
+    width: 9px;
+    height: 9px;
+    margin-right: 5px;
+}
+
+.slick-group-toggle.expanded {
+    background: url(images/collapse.gif) no-repeat center center;
+}
+
+.slick-group-toggle.collapsed {
+    background: url(images/expand.gif) no-repeat center center;
+}
+
+
